--- a/.classpath
+++ b/.classpath
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/gs-core-1.3-javadoc.jar"/>
-	<classpathentry kind="lib" path="lib/gs-core-1.3-sources.jar"/>
-	<classpathentry kind="lib" path="lib/gs-core-1.3.jar" sourcepath="lib/gs-core-1.3-sources.jar"/>
-	<classpathentry kind="lib" path="lib/gs-ui-1.3-javadoc.jar"/>
-	<classpathentry kind="lib" path="lib/gs-ui-1.3-sources.jar"/>
-	<classpathentry kind="lib" path="lib/gs-ui-1.3.jar"/>
+	<classpathentry kind="src" path="src/main/java">
+		<attributes>
+			<attribute name="FROM_GRADLE_MODEL" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
