--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
+title: Exploding Ketchup
+description: Multi-Agent Systems Project by Joost Doornkamp, Henry Maathuis & Ruben van Dijk
 show_downloads: true
 google_analytics:
 theme: 
