--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Exploding Ketchup
-description: "Multi-Agent Systems Project by: \n Joost Doornkamp, Henry Maathuis and Ruben van Dijk"
+description: "Multi-Agent Systems Project by:
+  Joost Doornkamp, Henry Maathuis and Ruben van Dijk"
 show_downloads: true
 google_analytics:
 theme: 
