--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Exploding Ketchup
-description: |+
+description: |
   Multi-Agent Systems Project by:
-    
+
   Joost Doornkamp, Henry Maathuis & Ruben van Dijk
 show_downloads: true
 google_analytics:
